FIX: slight element spacing-adjustment

--- a/styles/base.css
+++ b/styles/base.css
@@ -169,15 +169,15 @@ nav a:hover, nav a#selected {
 }
 
 #content div + *, #content img + *, #content p + *, #content ul + *, #content a + * {
-    margin-top: 0.3em;
+    margin-top: 0.45em;
 }
 
 #content * + h1 {
-    margin-top: 1em;
+    margin-top: 1.2em;
 }
 
 #content h1 {
-    margin-bottom: 0.4rem;
+    margin-bottom: 0.2rem;
     color: #44c55b; /* #c5449e */
 }
 
